--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch server.ts",
     "seed": "tsx src/seeds/seed.ts",
     "build": "tsc",
-    "start": "tsx server.ts",
+    "start": "node dist/server.js",
     "test": "NODE_ENV=test NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-vm-modules jest --runInBand --config=jest.config.cjs"
   },
   "prisma": {
