fix: for prod backend running on vercel

--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -4,5 +4,10 @@
   "outputDirectory": "dist",
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/index.ts": {
+      "runtime": "nodejs20.x"
+    }
   }
 }
