--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
     "@whiskeysockets/baileys": "^6.7.21",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
