--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
-    "rootDir": "./", /* Specify the root folder within your source files. */
+    "rootDir": "./",
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
@@ -16,11 +16,9 @@
     ]
   },
   "include": [
-    "**/*.ts",
-    "test/**/*.ts"
+    "**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "server.ts"
+    "node_modules"
   ]
 }
