fix: correcao com kiro para update na vercel do backend production

--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "npm install -g tsx",
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/src/api/index.js"
+      "dest": "api/index.ts"
     }
   ]
 }
