--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "npm install -g tsx",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.ts"
+      "dest": "dist/server.js"
     }
   ]
 }
