--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -11,6 +11,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
     "types": [
       "jest"
     ]
