--- a/front-end/.env.example
+++ b/front-end/.env.example
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:3020
-VITE_PUBLIC_API_URL=http://localhost:3020
+VITE_API_URL=https://agendapix-production.up.railway.app
+VITE_PUBLIC_API_URL=https://agendapix-production.up.railway.app
