--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "sjgestor",
   "private": true,
-  "version": "1.0.15",
+  "version": "1.0.16",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -55,6 +55,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
